--- a/locale/es.po
+++ b/locale/es.po
@@ -4,11 +4,11 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "error:analytic.distribution.report:"
 msgid ""
-"Analytic Account \"%(account)s\" cannot be configured as source and target "
-"in report \"%(report)s\"."
+"Analytic Account \"%(account)s\" cannot be configured as target after it has"
+" been configured as source in report \"%(report)s\"."
 msgstr ""
-"La cuenta analítica \"%(account)s\" no se puede configurar como origen y "
-"destino en el informe \"%(report)s\"."
+"La cuenta analítica \"%(account)s\" no se puede configurar como destino "
+"después de haberse configurado como origen en el informe \"%(report)s\"."
 
 msgctxt "field:analytic.distribution.report,company:"
 msgid "Company"
@@ -81,6 +81,10 @@ msgstr "Nombre"
 msgctxt "field:analytic.distribution.report.rule,report:"
 msgid "Report"
 msgstr "Informe"
+
+msgctxt "field:analytic.distribution.report.rule,sequence:"
+msgid "Sequence"
+msgstr "Secuencia"
 
 msgctxt "field:analytic.distribution.report.rule,source_analytic_account:"
 msgid "Source Analytic Account"
