--- a/locale/ca.po
+++ b/locale/ca.po
@@ -4,11 +4,11 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "error:analytic.distribution.report:"
 msgid ""
-"Analytic Account \"%(account)s\" cannot be configured as source and target "
-"in report \"%(report)s\"."
+"Analytic Account \"%(account)s\" cannot be configured as target after it has"
+" been configured as source in report \"%(report)s\"."
 msgstr ""
-"El compte analític \"%(account)s\" no es pot configurar com a origen i destí"
-" a l'informe \"%(report)s\"."
+"El compte analític \"%(account)s\" no es pot configurar com a destí després "
+"d'haver-se configurat com a origen a l'informe \"%(report)s\"."
 
 msgctxt "field:analytic.distribution.report,company:"
 msgid "Company"
@@ -81,6 +81,10 @@ msgstr "Nom"
 msgctxt "field:analytic.distribution.report.rule,report:"
 msgid "Report"
 msgstr "Informe"
+
+msgctxt "field:analytic.distribution.report.rule,sequence:"
+msgid "Sequence"
+msgstr "Seqüència"
 
 msgctxt "field:analytic.distribution.report.rule,source_analytic_account:"
 msgid "Source Analytic Account"
